--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "web-vitals": "^0.2.4"
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
